samples/_failures_safe/1761542173_f919ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ec8f071.c: In function ‘main’:
./samples/SAFE/__tmp_7ec8f071.c:169:35: error: expected ‘]’ at end of input
  169 |         printf(" '%s'\n", tokens[i
      |                                   ^
      |                                   ]
./samples/SAFE/__tmp_7ec8f071.c:169:9: error: expected declaration or statement at end of input
  169 |         printf(" '%s'\n", tokens[i
      |         ^~~~~~
./samples/SAFE/__tmp_7ec8f071.c:169:9: error: expected declaration or statement at end of input
